FIx app background not covering full height

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,9 +1,10 @@
-html, body {
-    height:100%;
-}
+html { height:100%; }
+body, #app { min-height:100%; }
 
 #app {
-    height:100%;
+    position:absolute;
+    width:100%;
+
     padding:1vw;
     box-sizing: border-box;
     font-family: "Open Sans","Lucida Grande","Helvetica Neue",Helvetica,Arial,Sans-serif;
